start of db implementation

--- a/views/newOrder.hbs
+++ b/views/newOrder.hbs
@@ -1,7 +1,11 @@
 <html>
     <p>Was fuer eine Pizze haetten Sie den gerne?</p>
     <form action='/orders' method='post'>
-        <input name='name' placeholder='pizza name'>
+        <input name='title' placeholder='title'>
+        <input name='content' placeholder='content'>
+        <input name='importance' placeholder='importance'>
+        <input name='date_due' placeholder='date_due'>
+
         <input type='submit' value='Order a Pizza'>
     </form>
 </html>
