--- a/views/showorder.hbs
+++ b/views/showorder.hbs
@@ -1,15 +1,16 @@
 <html>
-    <p>Order-Informationen</p>
-    {{#if pizzaName}}
-        <p>Bestellte Pizza: {{pizzaName}}</p>
-        <p>Bestellt am: {{orderDate}}</p>
-        <p>Ihre Nummer: {{_id}}</p>
-        <p>State: {{state}}</p>
-        {{#if_eq state "OK"}}
-            <form action='/orders/{{_id}}' method='post'><input type='hidden' name='_method'  value='delete'><input type='submit' value='Delete order'></form>
-        {{/if_eq}}
-    {{/if}}
-    <form action='/' method='get'>
-        <input type='submit' value='Zurueck zum start'>
-    </form>
+<p>Order-Informationen</p>
+{{#if title}}
+    <p>Title: {{title}}</p>
+    <p>Title: {{content}}</p>
+    <p>Created at: {{date}}</p>
+    <p>Due date: {{date_due}}</p>
+    <p>Importance: {{importance}}</p>
+    <p>Ihre Nummer: {{_id}}</p>
+    <p>State: {{state}}</p>
+    <form action='/orders/{{_id}}' method='post'><input type='hidden' name='_method'  value='delete'><input type='submit' value='Delete order'></form>
+{{/if}}
+<form action='/' method='get'>
+    <input type='submit' value='Zurueck zum start'>
+</form>
 </html>
