--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,8 @@
 <html>
     <p>Willkommen! Zu der besten Pizzaria auf der Welt!</p>
-    <form action='/orders' method='get'><input type='submit' value='Order a Pizza'></form>
+    <form action='/note' method='get'><input type='submit' value='Order a Pizza'></form>
 
-    {{#each notes}}
+    {{#each note}}
         {{title}}<br>
     {{/each}}
 </html>
