--- a/views/newOrder.hbs
+++ b/views/newOrder.hbs
@@ -1,6 +1,6 @@
 <html>
     <p>Was fuer eine Pizze haetten Sie den gerne?</p>
-    <form action='/orders' method='post'>
+    <form action='/note' method='post'>
         <input name='title' placeholder='title'>
         <input name='content' placeholder='content'>
         <input name='importance' placeholder='importance'>
