--- a/views/showorder.hbs
+++ b/views/showorder.hbs
@@ -8,7 +8,7 @@
     <p>Importance: {{importance}}</p>
     <p>Ihre Nummer: {{_id}}</p>
     <p>State: {{state}}</p>
-    <form action='/orders/{{_id}}' method='post'><input type='hidden' name='_method'  value='delete'><input type='submit' value='Delete order'></form>
+    <form action='/note/{{_id}}' method='post'><input type='hidden' name='_method'  value='delete'><input type='submit' value='Delete order'></form>
 {{/if}}
 <form action='/' method='get'>
     <input type='submit' value='Zurueck zum start'>
