--- a/views/succeeded.hbs
+++ b/views/succeeded.hbs
@@ -2,5 +2,5 @@
     <p>Erfolgreich!</p>
     <p>Ihre order: {{pizzaName}}</p>
     <p>Ihre Nummer: {{_id}}</p>
-    <p><a href='/orders/{{_id}}/'>Zeige order an</a></p>
+    <p><a href='/note/{{_id}}/'>Zeige order an</a></p>
 </html>
