--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,6 +4,9 @@
         <option value="light">Light-Mode</option>
         <option value="dark">Dark-Mode</option>
     </select>
+    <button id="byFinishButton">By finish Date</button>
+    <button id="byCreatedButton">By created Date</button>
+    <button id="byImportanceButton">By Importance</button>
     {{#each note}}
         {{title}}<br>
     {{/each}}
