--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,6 +7,7 @@
     <button id="byFinishButton">By finish Date</button>
     <button id="byCreatedButton">By created Date</button>
     <button id="byImportanceButton">By Importance</button>
+    <button id="showFinishedButton">Show Finished</button>
     {{#each note}}
         {{title}}<br>
     {{/each}}
