--- a/views/createNote.hbs
+++ b/views/createNote.hbs
@@ -1,11 +1,12 @@
 <html>
-    <p>Was fuer eine Pizze haetten Sie den gerne?</p>
+    <p>Neue Notiz erstellen:</p>
     <form action='/note' method='post'>
-        <input name='title' placeholder='title'>
+        <input name='title' value={{title}} placeholder='title'>
         <input name='content' placeholder='content'>
         <input name='importance' placeholder='importance'>
         <input name='date_due' placeholder='date_due'>
 
-        <input type='submit' value='Order a Pizza'>
+        <input type='submit' value='Speichern'>
+        <button>Abbrechen</button>
     </form>
 </html>
