implementation of basic functionality

--- a/views/createNote.hbs
+++ b/views/createNote.hbs
@@ -1,7 +1,7 @@
 <html>
     <p>Neue Notiz erstellen:</p>
     <form action='/note' method='post'>
-        <input name='title' value={{title}} placeholder='title'>
+        <input name='title' placeholder="title" placeholder='title'>
         <input name='content' placeholder='content'>
         <input name='importance' placeholder='importance'>
         <input name='date_due' placeholder='date_due'>
