addition to last commit

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,6 +11,7 @@
     {{#each note}}
         <div id="note">
             <h2>{{title}}</h2>
+            <div>{{state}}</div>
             <div>{{content}}</div>
             <div>
                 {{#times importance}}
