--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,45 +1,45 @@
-<html>
-<head>
-    <title>Notizen</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-</head>
-<body>
-    <header>
-        <div class="theme-switch-wrapper">
-        <a href="?theme={{#equal theme "dark"}}light {{else}}dark {{/equal}}"> {{#equal theme "dark"}}light mode {{else}}dark mode {{/equal}}</a>
-        </div>
-    </header>
-    <form action='/note' method='get'><input type='submit' id='createNote' value='Create new Note'></form>
-    <div>
-        <a href="?sort=date_due"> <button id="byFinishButton">By finish Date</button></a>
-        <a href="?sort=date"><button id="byCreatedButton">By created Date</button></a>
-        <a href="?sort=importance"><button id="byImportanceButton">By Importance</button></a>
-        <a href="?state={{#equal state "true"}}false {{else}}true {{/equal}}"><button id="showFinishedButton">Show Finished</button></a>
+<header>
+    <div class="theme-switch-wrapper">
+        <a href="?theme={{#equal theme "dark"}}light {{else}}dark {{/equal}}"> {{#equal theme "dark"}}
+        light mode {{else}}dark mode {{/equal}}</a>
     </div>
-    {{#if note}}
+</header>
+<form action='/note' method='get'><input type='submit' id='createNote' value='Create new Note'></form>
+<div>
+    <a href="?sort=date_due">
+        <button id="byFinishButton">By finish Date</button>
+    </a>
+    <a href="?sort=date">
+        <button id="byCreatedButton">By created Date</button>
+    </a>
+    <a href="?sort=importance">
+        <button id="byImportanceButton">By Importance</button>
+    </a>
+    <a href="?state={{#equal state "true"}}false {{else}}true {{/equal}}">
+    <button id="showFinishedButton">Show Finished</button>
+    </a>
+</div>
+{{#if note}}
     {{#each note}}
         <div id="note">
-            <div class = "noteTitle">{{title}}</div>
-            <div class = "noteState">{{state}}</div>
-            <div class = "noteContent">{{content}}</div>
-            <div class = "noteImportance">
+            <div class="noteTitle">{{title}}</div>
+            <div class="noteState">{{state}}</div>
+            <div class="noteContent">{{content}}</div>
+            <div class="noteImportance">
                 {{#times importance}}
                     <span>*</span>
                 {{/times}}
             </div>
-            <p class = noteEdit><a href='/note/{{_id}}/'>Edit</a></p>
+            <p class=noteEdit><a href='/note/{{_id}}/'>Edit</a></p>
 
         </div>
     {{/each}}
-    {{else}}
-        <div>No notes found.</div>
-    {{/if}}
+{{else}}
+    <div>No notes found.</div>
+{{/if}}
 
 {{#equal theme "dark"}}
     <h3>dark</h3>
 {{else}}
     <h3>light</h3>
 {{/equal}}
-
-</body>
-</html>
