--- a/views/createNote.hbs
+++ b/views/createNote.hbs
@@ -7,6 +7,6 @@
         <input name='date_due' placeholder='date_due'>
 
         <input type='submit' value='Speichern'>
-        <button>Abbrechen</button>
     </form>
+    <a href="/"><button>Abbrechen</button></a>
 </html>
