--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,62 +8,53 @@
     padding: 0;
 }
 
-:root {
-    --primary-color: #302AE6;
-    --secondary-color: #536390;
-    --font-color: #424242;
-    --bg-color: #fff;
-    --heading-color: #292922;
-}
-
-[data-theme="dark"] {
-    --primary-color: #9A97F3;
-    --secondary-color: #818cab;
-    --font-color: #e1e1ff;
-    --bg-color: #161625;
-    --heading-color: #818cab;
-}
-
-header div {
+header .theme-switch {
     float: right;
-    /*padding: 20px;*/
+    margin: 1rem 0rem 1rem 1rem;
 }
 
-button, input {
-    border-radius: 0.1rem;
-    padding: 0.4rem;
-    margin: 0.4rem;
+button, input, a {
+    text-decoration: none;
+    font-size: 1rem;
+    padding:  0.5rem 0.5rem;
+    border: none;
+    color: white;
+    background-color: rgb(0, 96, 160);
+    border-radius: 0.3rem;
+    margin: 0.5rem 1rem 1rem 0.5rem;
+}
+
+button:hover, input:hover, a:hover{
+    color: lightgray;
+}
+
+button:active, input:active, a:active{
+    -webkit-box-shadow: inset 1px 1px 10px #333;
+    -moz-box-shadow:    inset 1px 1px 10px #333;
+    box-shadow:         inset 1px 1px 10px #333;
+}
+
+@media only screen and (max-width: 600px) {
+    /* For mobile phones: */
+    a {
+        width: 100%;
+    }
 }
 
 #showFinishedButton {
     float: right;
 }
 
-/*Simple css to style it like a toggle switch*/
-.theme-switch-wrapper {
-    display: flex;
-    align-items: center;
-}
-.theme-switch {
-    display: inline-block;
-    height: 34px;
-    position: relative;
-    width: 60px;
+textarea, select, input, button, a { outline: none; }
+
+body {
+    font-size: 1rem;
+    font-family: "URW Gothic L", "Helvetica", "Arial", sans-serif;
+    counter-reset: section;
 }
 
-.theme-switch input {
-    display:none;
-}
-
-.slider {
-    background-color: #ccc;
-    bottom: 0;
-    cursor: pointer;
-    left: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    transition: .4s;
+main{
+    margin: 5px 10px 5px 10px;
 }
 
 .dark{
@@ -74,38 +65,11 @@ button, input {
     background-color: deepskyblue;
 }
 
-.slider:before {
-    background-color: #fff;
-    bottom: 4px;
-    content: "";
-    height: 26px;
-    left: 4px;
-    position: absolute;
-    transition: .4s;
-    width: 26px;
-}
-
-input:checked + .slider {
-    background-color: #66bb6a;
-}
-
-input:checked + .slider:before {
-    transform: translateX(26px);
-}
-
-.slider.round {
-    border-radius: 34px;
-}
-
-.slider.round:before {
-    border-radius: 50%;
-}
-
-#note {
+.note {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    background-color: var(--bg-color);
     padding: 2rem;
+    background-color: lightblue;
 }
 
 .noteState {
@@ -122,6 +86,8 @@ input:checked + .slider:before {
     grid-row-end: 1;
 }
 .noteImportance {
+    border: 2px solid black;
+    text-align: right;
     grid-column-start: 3;
     grid-column-end: 3;
     grid-row-start: 1;
