--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
-<body class={{theme}}>
+<body class={{#equal theme "dark"}}dark{{else}}light{{/equal}}>
 <div class="container">
     {{{body}}}
 </div>
