--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,6 +7,7 @@
     margin: 0;
     padding: 0;
 }
+textarea, select, input, button { outline: none; }
 
 header{
     display: inline;
@@ -52,14 +53,6 @@ button:active, input[type=submit]:active, a:active{
     box-shadow:         inset 1px 1px 10px #333;
 }
 
-@media only screen and (max-width: 600px) {
-    /* For mobile phones: */
-    a, input{
-        float: left;
-        width: 100%;
-        margin: 0rem 0.1rem 0.1rem 0.1rem;
-    }
-}
 
 body {
     font-size: 1rem;
@@ -69,7 +62,6 @@ body {
 
 main{
     margin: 5px 10px 5px 10px;
-    display: block;
 }
 
 .note {
@@ -106,8 +98,6 @@ main{
     grid-column: 2 / 4;
     grid-row: 2 / 3;
     resize: none;
-    width:100%;
-    height:100%;
     background-color: lightblue;
 }
 
@@ -143,4 +133,101 @@ input[type=search] {
 input[type=file]{
     width: 100%;
     font-size: 1rem;
+}
+
+input[type=checkbox]{
+    display: block;
+    margin-bottom: 1rem;
+}
+
+.dark{
+    background-color: black;
+    color: white;
+}
+
+.light{
+    background-color: aliceblue;
+}
+
+#create{
+    position: fixed;
+    left: 5%;
+    margin-top: 1rem;
+    width: 90%;
+}
+
+#create label{
+    height: 2rem;
+}
+
+input[type=text], input[type=number],input[type=date], textarea {
+    width: 100%;
+    padding: 0.5rem;
+    font-size: 1rem;
+    margin-bottom: 1rem;
+    box-sizing: border-box;
+    border: none;
+    border-bottom: 2px solid black;
+    background-color: #f2f2f2;
+}
+
+input:focus, textarea:focus{
+    border-bottom: 2px solid rgb(0, 96, 160);
+}
+
+h2 {
+    padding-bottom: 0.5rem;
+    border-bottom: 1px lightgray solid;
+}
+
+.dark input[type=text], .dark input[type=number], .dark input[type=date], .dark textarea {
+    color: white;
+    border-bottom: 2px solid white;
+    background-color: black;
+}
+
+@media only screen and (max-width: 600px) {
+    /* For mobile phones: */
+    a, input{
+        float: left;
+        width: 100%;
+        margin: 0rem 0.1rem 0.1rem 0.1rem;
+    }
+
+    .note {
+        grid-template-columns: 20% auto auto 10%;
+        grid-template-rows: auto auto auto;
+        margin: 1rem 0.1rem 0.1rem 0.1rem;
+    }
+
+    .noteDueDate{
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+    }
+
+    .noteState {
+        grid-column: 4 / 5;
+        grid-row: 1 / 2;
+    }
+
+    .noteTitle {
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+    }
+
+    .noteImportance {
+        grid-column: 3 / 4;
+        grid-row: 1 / 2;
+        text-align: center;
+    }
+
+    .noteContent{
+        grid-column: 1 / 5;
+        grid-row: 2 / 3;
+    }
+
+    .noteEdit{
+        grid-column: 1 / 2;
+        grid-row: 3 / 4;
+    }
 }
