--- a/views/index.hbs
+++ b/views/index.hbs
@@ -31,14 +31,6 @@
             </div>
         {{/each}}
     {{else}}
-        <div>No notes found.</div>
+        <div id="noNote">No notes found.</div>
     {{/if}}
 </main>
-
-{{#equal theme "dark"}}
-    <h3>dark</h3>
-{{else}}
-    <h3>light</h3>
-{{/equal}}
-
-{{orientation}}
