--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -201,7 +201,7 @@ h2 {
 
 @media only screen and (max-width: 600px) {
     /* For mobile phones: */
-    a, input {
+    a, input[type=submit] {
         float: left;
         width: 100%;
         margin: 0rem 0.1rem 0.1rem 0.1rem;
