--- a/views/createNote.hbs
+++ b/views/createNote.hbs
@@ -1,4 +1,5 @@
-<h2>{{#if note}}Edit Note!{{else}}Neue Notiz erstellen:{{/if}}</h2>
+<h2>{{title}}</h2>
+
 <form id="create" action='{{#if note}}/note/{{note._id}}{{else}}/note{{/if}}' method='post'>
     <label> Titel <input type='text' name='title' value="{{note.title}}" required></label>
     <label>Beschreibung<textarea name='content'>{{note.content}}</textarea></label>
