--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -166,7 +166,7 @@ input[type=text], input[type=number], input[type=date], textarea {
     background-color: #f2f2f2;
 }
 
-input:focus, textarea:focus, .dark input:focus, .dark textarea:focus {
+input:focus, textarea:focus, .dark input[type=text]:focus, .dark input[type=date]:focus,.dark input[type=number]:focus, .dark textarea:focus {
     border-bottom: 2px solid rgb(0, 96, 160);
 }
 
